Project18765: fix abstract button alignment to bottom-right using flex column

--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -63,12 +63,13 @@
 
 // Collapsible abstract on project pages
 .paper-entry {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin-bottom: 1.25rem;
 
   details {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    align-self: flex-end;
     margin-top: 0.25rem;
 
     summary {
@@ -91,7 +92,6 @@
       font-size: 0.875rem;
       margin-top: 0.5rem;
       margin-bottom: 0;
-      width: 100%;
     }
   }
 }
